--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_choose_location.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_choose_location.xml
@@ -18,6 +18,7 @@
         android:orientation="vertical"
         android:paddingStart="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp"
+        android:paddingBottom="@dimen/_14sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -27,20 +28,20 @@
             android:layout_height="wrap_content"
             android:background="@drawable/border"
             android:orientation="horizontal"
-            android:padding="@dimen/_10sdp">
+            android:padding="@dimen/_6sdp">
 
             <ImageView
                 android:id="@+id/imgBack"
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
+                android:layout_width="@dimen/_28sdp"
+                android:layout_height="@dimen/_28sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-
-                android:padding="@dimen/_3sdp"
+                android:layout_gravity="center_vertical"
+                android:padding="@dimen/_4sdp"
                 android:src="@drawable/ic_back_new" />
 
             <EditText
                 android:id="@+id/edtInput"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@null"
                 android:fontFamily="@font/nunito_light"
@@ -48,38 +49,18 @@
                 android:inputType="text"
                 android:textColor="@color/dark_blue"
                 android:textSize="16sp"
-
-                />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/bgScan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/_10sdp"
-            android:clickable="true"
-            android:focusable="true">
+                android:layout_weight="1"/>
 
             <ImageView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
+                android:id="@+id/bgScan"
+                android:layout_width="@dimen/_28sdp"
+                android:layout_height="@dimen/_28sdp"
                 android:padding="@dimen/_3sdp"
-                android:src="@drawable/ic_scan_qr" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/nunito_regular"
-                android:gravity="center_vertical"
-                android:inputType="text"
-                android:text="Scan QR Code"
-                android:textColor="@color/dark_blue"
-                android:textSize="16sp" />
+                android:src="@drawable/ic_scan_qr"
+                android:layout_marginEnd="@dimen/_5sdp"/>
 
         </LinearLayout>
+
     </LinearLayout>
 
     <View
