--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_info_bottom_sheet_modified.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_info_bottom_sheet_modified.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:orientation="vertical"
-    android:visibility="gone"
-    app:behavior_peekHeight="?actionBarSize"
+    android:visibility="visible"
+    app:behavior_peekHeight="@dimen/_18sdp"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <!-- TOP -->
@@ -16,42 +16,18 @@
         android:layout_height="?actionBarSize"
         android:background="@color/white">
 
-        <!-- DISTANCE BLOCK -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/distance_block"
+        <TextView
+            android:id="@+id/tv_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/nunito_bold"
+            android:inputType="number"
+            android:padding="0dp"
+            android:text="12"
+            android:textColor="@color/dark_green"
+            android:textSize="25sp"
             android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/_20sdp">
-
-            <TextView
-                android:id="@+id/tv_distance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_bold"
-                android:inputType="number"
-                android:padding="0dp"
-                android:text="12"
-                android:textColor="@color/dark_green"
-                android:textSize="25sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_distance_unit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginBottom="7dp"
-                android:fontFamily="@font/nunito_light"
-                android:text="m"
-                android:textColor="@color/dark_green"
-                android:textSize="13sp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_distance"
-                app:layout_constraintStart_toEndOf="@+id/tv_distance" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginStart="@dimen/_20sdp"/>
 
         <ImageView
             android:id="@+id/img_time"
@@ -59,45 +35,22 @@
             android:layout_height="@dimen/_2sdp"
             android:src="@drawable/ic_time_dot"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/distance_block"
+            android:layout_toRightOf="@id/tv_distance"
             android:layout_marginStart="@dimen/_8sdp"/>
 
-        <!-- TIME BLOCK -->
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:fontFamily="@font/nunito_bold"
+            android:inputType="number"
+            android:padding="0dp"
+            android:text="25"
+            android:textColor="@color/black_gray"
+            android:textSize="20sp"
             android:layout_toRightOf="@id/img_time"
-            android:layout_marginStart="@dimen/_7sdp">
-
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_bold"
-                android:inputType="number"
-                android:padding="0dp"
-                android:text="25"
-                android:textColor="@color/black_gray"
-                android:textSize="25sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_time_unit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginBottom="7dp"
-                android:fontFamily="@font/nunito_light"
-                android:text="sec"
-                android:textColor="@color/black_gray"
-                android:textSize="13sp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_time"
-                app:layout_constraintStart_toEndOf="@+id/tv_time" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/_7sdp" />
 
     </RelativeLayout>
 
@@ -107,6 +60,5 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
-
 
 </LinearLayout>
