--- a/Mobile App/Demo4.2/app/src/main/res/layout/item_destination_adapter.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/item_destination_adapter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -8,8 +9,8 @@
         android:id="@+id/line"
         android:layout_width="0dp"
         android:layout_height="0.5dp"
-        android:layout_marginStart="@dimen/_75sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_52sdp"
+        android:layout_marginEnd="@dimen/_30sdp"
         android:background="@color/dark_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,9 +18,9 @@
 
     <ImageView
         android:id="@+id/imgType"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_70sdp"
-        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_width="@dimen/_14sdp"
+        android:layout_height="@dimen/_55sdp"
+        android:layout_marginStart="@dimen/_20sdp"
 
         android:src="@drawable/ic_clock"
         app:layout_constraintBottom_toBottomOf="@+id/guide_section"
@@ -32,13 +33,13 @@
         android:layout_height="wrap_content"
         android:text="11"
         android:fontFamily="@font/nunito_bold"
-        android:textSize="15sp"
-        android:textColor="@android:color/black"
+        android:textSize="10sp"
+        android:textColor="@color/dark_blue"
 
         app:layout_constraintStart_toStartOf="@id/imgType"
         app:layout_constraintTop_toTopOf="@+id/imgType"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_15sdp"
         />
 
     <LinearLayout
@@ -61,7 +62,7 @@
             android:id="@+id/tvDestination"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="@font/nunito_regular"
+            android:fontFamily="@font/nunito_bold"
             android:text="Lên lầu"
             android:textColor="@color/dark_blue"
             android:textSize="17sp" />
