--- a/Mobile App/Demo4.2/app/src/main/res/layout/item_location_adapter.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/item_location_adapter.xml
@@ -8,8 +8,8 @@
         android:id="@+id/line"
         android:layout_width="0dp"
         android:layout_height="0.5dp"
-        android:layout_marginStart="@dimen/_70sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_52sdp"
+        android:layout_marginEnd="@dimen/_30sdp"
         android:background="@color/dark_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,9 +17,9 @@
 
     <ImageView
         android:id="@+id/imgType"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_70sdp"
-        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_width="@dimen/_14sdp"
+        android:layout_height="@dimen/_55sdp"
+        android:layout_marginStart="@dimen/_20sdp"
 
         android:src="@drawable/ic_marker"
         app:layout_constraintBottom_toBottomOf="@+id/guide_section"
@@ -33,9 +33,9 @@
         android:orientation="vertical"
         android:layout_marginEnd="@dimen/_10sdp"
 
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_7sdp"
+        android:layout_marginBottom="@dimen/_7sdp"
+        android:layout_marginStart="@dimen/_20sdp"
         app:layout_goneMarginBottom="@dimen/_15sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
             android:id="@+id/tvLocation"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="@font/nunito_regular"
+            android:fontFamily="@font/nunito_bold"
             android:text="Lên lầu"
             android:textColor="@color/dark_blue"
             android:textSize="17sp" />
