--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_info_bottom_sheet_modified.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_info_bottom_sheet_modified.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:orientation="vertical"
-    android:visibility="visible"
-    app:behavior_peekHeight="@dimen/_18sdp"
+    android:visibility="gone"
+    app:behavior_peekHeight="?actionBarSize"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
     <!-- TOP -->
@@ -21,7 +21,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_bold"
-            android:inputType="number"
             android:padding="0dp"
             android:text="12"
             android:textColor="@color/dark_green"
@@ -43,7 +42,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_bold"
-            android:inputType="number"
             android:padding="0dp"
             android:text="25"
             android:textColor="@color/black_gray"
