--- a/Web Admin/Capstone_Web/src/main/resources/static/css/stepper.css
+++ b/Web Admin/Capstone_Web/src/main/resources/static/css/stepper.css
@@ -13,7 +13,7 @@ body {
 	display: table;
 	width: 100%;
 	margin: 0 auto;
-	background-color: #FFFFFF;
+	background-color: #F0F0F0;
 }
 
 .md-stepper-horizontal .md-step {
