--- a/Web Admin/Capstone_Web/src/main/resources/static/css/index.css
+++ b/Web Admin/Capstone_Web/src/main/resources/static/css/index.css
@@ -1,5 +1,10 @@
 body, html {
 	height: 100%;
+	background-color: #F0F0F0;
+}
+
+hr {
+	float: left;
 }
 
 .bg {
@@ -18,20 +23,9 @@ body, html {
 	width: 40%;
 	border: 2px solid white;
 	position: relative;
-	border-radius: 25px;
+	border-radius: 5px;
 	background-repeat: no-repeat;
 	background-size: cover;
-}
-
-.icon div {
-	height: auto;
-	text-align: center;
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
 }
 
 .icon div img {
@@ -47,33 +41,27 @@ body, html {
 .content {
 	max-width: 50%;
 	height: 95%;
-	background-color: white;
+	background-color: #F0F0F0;
 	float: left;
 	width: 57%;
-	margin: 0.5% 0.5% 0.5% 2.5%;
+	margin-left: 2rem;
 	height: 95%;
 }
 
 .content-header {
 	width: 99%;
 	float: left;
-	margin-top: 1%;
-	margin-bottom: 1%;
+	margin-bottom: 4rem;
+	margin-top: 1rem;
 }
 
-.content-header p {
-	font-size: 25px;
-	float: left;
-}
-
-.content-header a {
-	float: right;
+.content-header img {
+	max-width: 50vh;
 }
 
 .content-body {
-	width: 99%;
+	width: 100%;
 	float: left;
-	background-color: teal;
 }
 
 .list-group {
@@ -81,12 +69,37 @@ body, html {
 	width: 100%;
 }
 
-.list-header {
-	width: 100%;
-	float: left;
-	background-color: #4e73df;
-	padding: 10px 10px 10px 10px;
+.list-group-item {
+	border-left: 0px;
+	border-right: 0px;
+	border-radius: 0%;
+	border-top: 0px;
 }
+
+.list-header {
+	float: left;
+	width: 100%;
+	font-weight: bold;
+}
+
+.list-header p {
+	font-size: 13px;
+	color: grey !important;
+}
+
+.active {
+	color: #51C6A7;
+	font-weight: bold;
+	font-size: 10px;
+}
+
+.inactive {
+	color: red;
+	font-weight: bold;
+	font-size: 10px;
+}
+
+/*
 
 #company-list-title {
 	width: 90%;
@@ -102,8 +115,7 @@ body, html {
 .list-header a, h5 {
 	color: white;
 	margin-bottom: 0px;
-}
-
+} */
 .list-body {
 	max-height: 60vh;
 	overflow-y: scroll;
@@ -117,10 +129,17 @@ body, html {
 #company-list-item-1 {
 	float: left;
 	width: 70%;
+	padding-top: 1rem;
+	padding-bottom: 0.5rem;
+	padding-left: 2rem;
+	width: 70%
 }
 
-#company-list-item-1 span {
-	float: right;
+#company-list-item-1 p {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-weight: bold;
+	color: #334F55;
 }
 
 #company-list-item-2 {
@@ -128,10 +147,10 @@ body, html {
 	width: 30%;
 	text-align: center;
 	font-weight: bold;
-	color: blue;
+	color: #334F55;
 }
 
-#company-list-header {
+/* #company-list-header {
 	position: sticky;
 	top: 0;
 	z-index: 10;
@@ -149,6 +168,10 @@ body, html {
 	width: 30%;
 	text-align: center;
 	font-weight: bold;
+} */
+.badge-custom {
+	color: #fff;
+	background-color: #51C6A7;
 }
 
 #company-list-item-2:hover {
@@ -156,9 +179,12 @@ body, html {
 }
 
 .modal-header {
-	background-color: #4e73df;
-	padding-top: 10px !important;
-	padding-bottom: 10px !important;
+	color: #fff;
+	background-color: #51C6A7;
+}
+
+.modal-title {
+	font-weight: bold;
 }
 
 #buildingWraper {
@@ -178,7 +204,8 @@ body, html {
 
 #form-header {
 	padding: 10px 10px 10px 10px;
-	background-color: #4e73df;
+	background-color: #51C6A7;
+	color: #fff;
 	margin-bottom: 5%;
 }
 
@@ -189,7 +216,7 @@ body, html {
 #building-list {
 	width: 100%;
 	margin-top: 10px;
-	max-height: 45vh;
+	max-height: 50vh;
 	overflow: auto;
 }
 
@@ -201,32 +228,86 @@ body, html {
 
 #building-list-item-1 {
 	float: left;
-	width: 60%;
+	width: 35%;
+	font-weight: bold;
+	color: #334F55;
 }
 
 #building-list-item-2 {
 	float: left;
-	width: 20%;
+	width: 25%;
 	text-align: center;
 }
 
 #building-list-item-3 {
 	float: left;
 	width: 20%;
-	text-align: center;
+}
+
+#building-list-item-4 {
+	float: left;
+	width: 20%;
 }
 
 .wraper {
 	width: 100%;
-	margin: 2% 0% 2% 0%;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 	float: left;
 	position: relative;
+	background-color: white;
+	padding: 1rem;
+	float: left;
 }
 
 #actionWraper {
 	float: left;
+	width: 100%;
+	display: flex;
+	align-items: center;
+}
+
+.btn-custom-1 {
+	color: #fff;
+	background-color: #51C6A7;
+	border-color: #51C6A7;
+}
+
+.btn-custom-1:hover {
+	color: #51C6A7;
+	background-color: #fff;
+	border-color: #51C6A7;
+}
+
+.right {
+	float: right !important;
+}
+
+.bold {
+	font-weight: bold;
+	color: #334F55;
+}
+
+.percent-70 {
+	width: 70%;
+}
+
+.percent-80 {
+	width: 70%;
+}
+
+.percent-30 {
 	width: 30%;
 }
+
+.percent-20 {
+	width: 30%;
+}
+
+/* .margin-5-percent {
+	margin-left: 5%;
+	margin-right: 5%;
+} */
 
 #messageWraper {
 	float: left;
@@ -248,26 +329,41 @@ body, html {
 	padding-bottom: 0px !important;
 }
 
-.margin-middle {
-	margin-left: 10%;
-	margin-right: 10%;
-	padding-top: 10px;
+/* .col-sm-7, .col-sm-8, .col-sm-6, .col-sm-5, .col-sm-10 {
+	padding-left: 0px !important;
+} */
+#companyName {
+	padding-left: 1rem !important;
+	font-weight: bold;
+	margin-right: 1rem;
 }
 
-.col-sm-7, .col-sm-8, .col-sm-6, .col-sm-5 {
-	padding-left: 0px !important;
+#company-label {
+	font-weight: bold;
+	color: grey;
+	font-style: italic;
+}
+
+.form-control {
+	border: 1px solid !important;
 }
 
 .modal {
 	background-color: rgba(0, 0, 0, 0.7);
 }
 
-#building-modal {
+/* #building-modal {
 	margin-top: 10px !important;
 }
 
 #building-modal .modal-content {
 	max-height: 99vh;
+	background-color: #F0F0F0;
+}
+ */
+.modal-content {
+	background-color: #F0F0F0;
+	padding-bottom: 1rem;
 }
 
 .modal-open .modal {
@@ -283,4 +379,8 @@ body, html {
 
 .empty h5 {
 	color: black;
+}
+
+.modal-footer {
+	padding-bottom: 0px !important;
 }
