Android App: fix bug camera preview

--- a/Mobile App/Demo4.2/app/src/main/res/layout/activity_test.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/activity_test.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".activity.TestActivity">
 
-    <fragment
-        android:id="@+id/fragment"
-        class="fpt.capstone.inqr.fragment.ChooseDestinationFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<!--    <fragment-->
+<!--        android:id="@+id/fragment"-->
+<!--        class="fpt.capstone.inqr.fragment.ChooseDestinationFragment"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tvText"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_50sdp"
+        android:text="ssss"
+        android:textColor="@android:color/black"
+        android:gravity="center"
+        android:textSize="18sp"
+        />
+
+
+
+</LinearLayout>
