--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_modified_updated.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map_modified_updated.xml
@@ -329,7 +329,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                    <SurfaceView
+                    <FrameLayout
                         android:id="@+id/cameraView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
