Android App: add check Internet, enhance dialog

--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_navigation.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_navigation.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="center"
         android:scaleType="centerCrop"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/tv_scanning_result"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ar_fragment"
